@@ -37,9 +37,11 @@
 #ifdef __GNUC__
 #    define SERD_PURE_FUNC __attribute__((pure))
 #    define SERD_CONST_FUNC __attribute__((const))
+#    define SERD_MALLOC_FUNC __attribute__((malloc))
 #else
 #    define SERD_PURE_FUNC
 #    define SERD_CONST_FUNC
+#    define SERD_MALLOC_FUNC
 #endif
 
 #ifdef __clang__
@@ -54,6 +56,7 @@
 
 #define SERD_PURE_API SERD_API SERD_PURE_FUNC
 #define SERD_CONST_API SERD_API SERD_CONST_FUNC
+#define SERD_MALLOC_API SERD_API SERD_MALLOC_FUNC
 
 #ifdef __cplusplus
 extern "C" {
@@ -68,6 +71,9 @@ extern "C" {
    A lightweight RDF syntax library.
    @{
 */
+
+/// Global library state
+typedef struct SerdWorldImpl SerdWorld;
 
 /// Lexical environment for relative URIs or CURIEs (base URI and namespaces)
 typedef struct SerdEnvImpl SerdEnv;
@@ -658,6 +664,39 @@ typedef struct SerdSink {
 
 /**
    @}
+   @name World
+   @{
+*/
+
+/**
+   Create a new Serd World.
+
+   It is safe to use multiple worlds in one process, though no objects can be
+   shared between worlds.
+*/
+SERD_MALLOC_API
+SerdWorld* SERD_ALLOCATED
+serd_world_new(void);
+
+/// Free `world`
+SERD_API
+void
+serd_world_free(SerdWorld* SERD_NULLABLE world);
+
+/**
+   Set a function to be called when errors occur.
+
+   The `error_sink` will be called with `handle` as its first argument.  If
+   no error function is set, errors are printed to stderr.
+*/
+SERD_API
+void
+serd_world_set_error_sink(SerdWorld* SERD_NONNULL     world,
+                          SerdErrorSink SERD_NULLABLE error_sink,
+                          void* SERD_NULLABLE         handle);
+
+/**
+   @}
    @name Environment
    @{
 */
@@ -751,7 +790,9 @@ serd_env_foreach(const SerdEnv* SERD_NONNULL env,
 /// Create a new RDF reader
 SERD_API
 SerdReader* SERD_ALLOCATED
-serd_reader_new(SerdSyntax syntax, const SerdSink* SERD_NONNULL sink);
+serd_reader_new(SerdWorld* SERD_NONNULL      world,
+                SerdSyntax                   syntax,
+                const SerdSink* SERD_NONNULL sink);
 
 /**
    Enable or disable strict parsing
@@ -763,18 +804,6 @@ serd_reader_new(SerdSyntax syntax, const SerdSink* SERD_NONNULL sink);
 SERD_API
 void
 serd_reader_set_strict(SerdReader* SERD_NONNULL reader, bool strict);
-
-/**
-   Set a function to be called when errors occur during reading.
-
-   The `error_sink` will be called with `handle` as its first argument.  If
-   no error function is set, errors are printed to stderr in GCC style.
-*/
-SERD_API
-void
-serd_reader_set_error_sink(SerdReader* SERD_NONNULL    reader,
-                           SerdErrorSink SERD_NULLABLE error_sink,
-                           void* SERD_NULLABLE         error_handle);
 
 /**
    Set a prefix to be added to all blank node identifiers.
@@ -877,7 +906,8 @@ serd_reader_free(SerdReader* SERD_NULLABLE reader);
 /// Create a new RDF writer
 SERD_API
 SerdWriter* SERD_ALLOCATED
-serd_writer_new(SerdSyntax                   syntax,
+serd_writer_new(SerdWorld* SERD_NONNULL      world,
+                SerdSyntax                   syntax,
                 SerdStyle                    style,
                 SerdEnv* SERD_NONNULL        env,
                 const SerdURI* SERD_NULLABLE base_uri,
@@ -923,18 +953,6 @@ serd_buffer_sink(const void* SERD_NONNULL buf,
 SERD_API
 char* SERD_NULLABLE
 serd_buffer_sink_finish(SerdBuffer* SERD_NONNULL stream);
-
-/**
-   Set a function to be called when errors occur during writing.
-
-   The `error_sink` will be called with `handle` as its first argument.  If
-   no error function is set, errors are printed to stderr.
-*/
-SERD_API
-void
-serd_writer_set_error_sink(SerdWriter* SERD_NONNULL   writer,
-                           SerdErrorSink SERD_NONNULL error_sink,
-                           void* SERD_NULLABLE        error_handle);
 
 /**
    Set a prefix to be removed from matching blank node identifiers
