@@ -323,10 +323,12 @@ main(int argc, char** argv)
 		base = serd_new_file_uri(input, NULL, &base_uri);
 	}
 
-	FILE* const    out_fd = stdout;
-	SerdEnv* const env    = serd_env_new(base);
+	FILE* const       out_fd = stdout;
+	SerdWorld* const  world  = serd_world_new();
+	SerdEnv* const    env    = serd_env_new(base);
 
-	SerdWriter* const writer = serd_writer_new(output_syntax,
+	SerdWriter* const writer = serd_writer_new(world,
+	                                           output_syntax,
 	                                           output_style,
 	                                           env,
 	                                           &base_uri,
@@ -334,12 +336,11 @@ main(int argc, char** argv)
 	                                           out_fd);
 
 	SerdReader* const reader =
-	    serd_reader_new(input_syntax, serd_writer_sink(writer));
+	    serd_reader_new(world, input_syntax, serd_writer_sink(writer));
 
 	serd_reader_set_strict(reader, !lax);
 	if (quiet) {
-		serd_reader_set_error_sink(reader, quiet_error_sink, NULL);
-		serd_writer_set_error_sink(writer, quiet_error_sink, NULL);
+		serd_world_set_error_sink(world, quiet_error_sink, NULL);
 	}
 
 	SerdNode* root = serd_new_string(SERD_URI, root_uri);
@@ -372,6 +373,7 @@ main(int argc, char** argv)
 	serd_writer_free(writer);
 	serd_env_free(env);
 	serd_node_free(base);
+	serd_world_free(world);
 	free(input_path);
 
 	if (from_file) {
